--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,21 +3,11 @@ zeebe.client.cloud.clusterId=676d31d1-3da7-4229-a836-5e8fe6d0791c
 zeebe.client.cloud.clientId=MQ-8xwGOf.sl6vW~FypD5mmuNOdLCpw9
 zeebe.client.cloud.clientSecret=eVRMb.ixNqUfmzlCMey6RP4O8_ILmhRn0Ue2SmjO3IgfsInbbfWFxPODd.YGRETe
 
-#database.postgresql.dburl=jdbc:postgresql://195.150.230.208:5432/2022_markowicz_wiktor/conference_room_reservation
-#database.postgresql.dbuser=2022_markowicz_wiktor
-#database.postgresql.dbpassword=34306
-
-#spring.datasource.url=jdbc:postgresql://195.150.230.208:5432/2022_markowicz_wiktor
-#spring.datasource.username=2022_markowicz_wiktor
-#spring.datasource.password=34306
-#spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://195.150.230.208:5432/2022_markowicz_wiktor
-spring.datasource.username=2022_markowicz_wiktor
-spring.datasource.password=34306
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:h2:mem:bpmn;INIT=CREATE SCHEMA IF NOT EXISTS bpmn_projekt
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
