--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 			<version>2.7.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
